galen-core/src/test/resources/negative-specs/incorrect-indentation-2.spec


==============
object    id object
==============


object
   width: 10px
  height: 10px